--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,8 +29,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
-.content .one {
-    background-color: white;
+.content .leftside {
     border-right: 1px solid black;
     grid-column: 1;
     text-align: right;
@@ -40,22 +39,31 @@ body {
 }
 .content h3 {
     color:black;
-    padding-top: 3px;
+    padding-top: 5px;
+    margin-block-end: 10px;
 }
-.content .two {
+.content h4 {
+    color:black;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+.content h3 span{
     background-color: white;
+    padding-left: 10px;
+}
+.content .rightside {
     max-width: 625px;
     padding-left: 15px;
     padding-right: 20px;
     border-left: 1px solid black;
     grid-column: 2/4;
 }
-.content .two h2 {
+.content .rightside h2 {
     text-align: center;
     padding-bottom: 4px;
     border: 1px solid black;
 }
-.content .two h4 {
+.content .rightside h4 {
     margin-bottom: 8px;
 }
 .content p {
@@ -64,4 +72,8 @@ body {
 }
 .content li {
     margin: 10px 0px 5px 10px;
+}
+.content .job .tools {
+    padding-left: 2%;
+    list-style-type: circle;
 }
